--- a/index.html
+++ b/index.html
@@ -4,8 +4,71 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/styles.css">
-    <title></title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Maven+Pro:wght@400;500;600;700;800;900&family=Quattrocento:wght@400;700&family=Sriracha&display=swap" rel="stylesheet">
+    <title>emojuice</title>
   </head>
-
-  <body></body>
+  <body>
+    <header>
+      <div class="title">
+        <h1></h1>
+        <p>Boissons végétales préparées avec amour</p>
+      </div>
+      <div class="cta-container">
+        <a class="cta cta-color">Accédez à nos produits</a>
+        <a class="cta cta-light">Nous contacter</a>
+      </div>
+    </header>
+    <main>
+      <div class="section-intro">
+        <h2>Manger sainement:</br>«un art de vie»</h2>
+        <p>
+          Chez<strong> emojuice</strong>, nous tentons de vous fournir des 
+          produits <strong>sains</strong> et <strong>respectueux</strong> de la 
+          planète.
+        </p>
+        IMG
+      </div>
+      <div class="section-produit">
+        <h2>Nos produits</h2>
+        <div class="produits">
+          <h3>Jus banane</h3>
+          <p>Notre plus grand classique.</p>
+          <a>En savoir plus</a>
+          IMG
+        </div>
+        <div class="produits">
+          <h3>Sirop kiwi</h3>
+          <p>En vert et contre tous.</p>
+          <a>En savoir plus</a>
+          IMG
+        </div>
+        <div class="produits">
+          <h3>Glace au café</h3>
+          <p>«Un espresso pour Georges!»</p>
+          <a>En savoir plus</a>
+          IMG
+        </div>
+        <div class="produits">
+          <h3>Délice à la fraise</h3>
+          <p>La voilà qui ramène sa fraise.</p>
+          <a>En savoir plus</a>
+          IMG
+        </div>
+      </div>
+      <div class="section-contact">
+          <h3>Nous contacter?</h3>
+          <div class="cta-container">
+            <a class="cta-color">emojuice@veggies.ch</a>
+            <a class="cta-color">Instagram</a>
+            <a class="cta-color">Facebook</a>
+          </div>
+      </div>
+    </main>
+    <footer>
+      <p>Emojuice est une marque déposée par Veggies inc. Switzerland.</p>
+      IMG
+    </footer>
+  </body>
 </html>
