mise en place des images

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
     <header>
       <div class="title">
-        <h1></h1>
+        <h1><img src="img/emojuice.svg" alt="emojuice"></h1>
         <p>Boissons végétales préparées avec amour</p>
       </div>
       <div class="cta-container">
@@ -28,7 +28,10 @@
           produits <strong>sains</strong> et <strong>respectueux</strong> de la 
           planète.
         </p>
-        IMG
+        <img src="img/peche.svg" alt="illustration d'une pêche">
+        <img src="img/citron.svg" alt="illustration d'un citron">
+        <img src="img/pasteque.svg" alt="illustration d'une pastèque">
+        <img src="img/orange.svg" alt="illustration d'une orange">
       </div>
       <div class="section-produit">
         <h2>Nos produits</h2>
@@ -36,25 +39,25 @@
           <h3>Jus banane</h3>
           <p>Notre plus grand classique.</p>
           <a>En savoir plus</a>
-          IMG
+          <img src="img/banane-gauche.svg" alt="illustration d'une banane">
         </div>
         <div class="produits">
           <h3>Sirop kiwi</h3>
           <p>En vert et contre tous.</p>
           <a>En savoir plus</a>
-          IMG
+          <img src="img/kiwi.svg" alt="illustration d'un kiwi">
         </div>
         <div class="produits">
           <h3>Glace au café</h3>
           <p>«Un espresso pour Georges!»</p>
           <a>En savoir plus</a>
-          IMG
+          <img src="img/cafe.svg" alt="illustration d'une tasse à café">
         </div>
         <div class="produits">
           <h3>Délice à la fraise</h3>
           <p>La voilà qui ramène sa fraise.</p>
           <a>En savoir plus</a>
-          IMG
+          <img src="img/fraise.svg" alt="illustration d'une fraise">
         </div>
       </div>
       <div class="section-contact">
@@ -68,7 +71,11 @@
     </main>
     <footer>
       <p>Emojuice est une marque déposée par Veggies inc. Switzerland.</p>
-      IMG
+      <img src="img/banane-droite.svg" alt="illustration d'une banane">
+      <img src="img/kiwi.svg" alt="illustration d'un kiwi">
+      <img src="img/pomme.svg" alt="illustration d'une pomme">
+      <img src="img/ananas.svg" alt="illustration d'un ananas">
+
     </footer>
   </body>
 </html>
