--- a/index.html
+++ b/index.html
@@ -29,10 +29,12 @@
           produits <strong>sains</strong> et <strong>respectueux</strong> de la 
           planète.
         </p>
-        <img src="img/peche.svg" alt="illustration d'une pêche">
-        <img src="img/citron.svg" alt="illustration d'un citron">
-        <img src="img/pasteque.svg" alt="illustration d'une pastèque">
-        <img src="img/orange.svg" alt="illustration d'une orange">
+        <div class="fruit-container">
+          <img src="img/peche.svg" alt="illustration d'une pêche">
+          <img src="img/citron.svg" alt="illustration d'un citron">
+          <img src="img/pasteque.svg" alt="illustration d'une pastèque">
+          <img src="img/orange.svg" alt="illustration d'une orange">
+        </div>
       </div>
       <div class="section-produit">
         <h2>Nos produits</h2>
