--- a/index.html
+++ b/index.html
@@ -39,28 +39,36 @@
       <div class="section-produit">
         <h2>Nos produits</h2>
         <div class="produits">
-          <h3>Jus banane</h3>
-          <p>Notre plus grand classique.</p>
-          <a>En savoir plus</a>
-          <img src="img/banane-gauche.svg" alt="illustration d'une banane">
+          <div class="banane">
+            <h3>Jus banane</h3>
+            <p>Notre plus grand classique.</p>
+            <img src="img/banane-gauche.svg" alt="illustration d'une banane">
+            <a>En savoir plus</a>
+          </div>
         </div>
         <div class="produits">
-          <h3>Sirop kiwi</h3>
-          <p>En vert et contre tous.</p>
-          <a>En savoir plus</a>
-          <img src="img/kiwi.svg" alt="illustration d'un kiwi">
+          <div class="kiwi">
+            <h3>Sirop kiwi</h3>
+            <p>En vert et contre tous.</p>
+            <img src="img/kiwi.svg" alt="illustration d'un kiwi">
+            <a>En savoir plus</a>
+          </div>
         </div>
         <div class="produits">
-          <h3>Glace au café</h3>
-          <p>«Un espresso pour Georges!»</p>
-          <a>En savoir plus</a>
-          <img src="img/cafe.svg" alt="illustration d'une tasse à café">
+          <div class="cafe">
+            <h3>Glace au café</h3>
+            <p>«Un espresso pour Georges!»</p>
+            <img src="img/cafe.svg" alt="illustration d'une tasse à café">
+            <a>En savoir plus</a>
+          </div>
         </div>
         <div class="produits">
-          <h3>Délice à la fraise</h3>
-          <p>La voilà qui ramène sa fraise.</p>
-          <a>En savoir plus</a>
-          <img src="img/fraise.svg" alt="illustration d'une fraise">
+            <div class="fraise">
+            <h3>Délice à la fraise</h3>
+            <p>La voilà qui ramène sa fraise.</p>
+            <img src="img/fraise.svg" alt="illustration d'une fraise">
+            <a>En savoir plus</a>
+          </div>
         </div>
       </div>
       <div class="section-contact">
