--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
         <p>Boissons végétales préparées avec amour</p>
       </div>
       <div class="cta-container">
-        <a class="cta cta-color">Accédez à nos produits</a>
+        <a class="cta cta-color" href="#produit">Accédez à nos produits</a>
         </br>
-        <a class="cta cta-light">Nous contacter</a>
+        <a class="cta cta-light" href="#contact">Nous contacter</a>
       </div>
     </header>
     <main>
@@ -36,7 +36,7 @@
           <img src="img/orange.svg" alt="illustration d'une orange">
         </div>
       </div>
-      <div class="section-produit">
+      <div class="section-produit" id="produit">
         <h2>Nos produits</h2>
         <div class="produits">
           <div class="banane">
@@ -71,8 +71,8 @@
           </div>
         </div>
       </div>
-      <div class="section-contact">
-          <h3>Nous contacter?</h3>
+      <div class="section-contact" id="contact">
+          <h2>Nous contacter</h2>
           <div class="cta-container">
             <a class="cta-color">emojuice@veggies.ch</a>
             <a class="cta-color">Instagram</a>
@@ -82,10 +82,12 @@
     </main>
     <footer>
       <p>Emojuice est une marque déposée par Veggies inc. Switzerland.</p>
+      <div class="fruit-container">
       <img src="img/banane-droite.svg" alt="illustration d'une banane">
       <img src="img/kiwi.svg" alt="illustration d'un kiwi">
       <img src="img/pomme.svg" alt="illustration d'une pomme">
       <img src="img/ananas.svg" alt="illustration d'un ananas">
+      </div>
 
     </footer>
   </body>
